Fixed accordions on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -171,12 +171,10 @@ body {
     width: 1000rem;
     display: flex;
     transition: left 1s; }
-  .slider__item {
-    width: 80rem;
-    height: 50rem; }
   .slider__image {
     width: 100%;
-    height: 100%; }
+    max-width: 60rem;
+    height: auto; }
   .slider__btn {
     position: absolute;
     top: 50%;
@@ -222,7 +220,8 @@ body {
     color: #F7F9F9; }
 
 .hor-accordion {
-  width: 80rem;
+  width: 100%;
+  max-width: 80rem;
   margin: 0 auto;
   background-color: #0e1f3e;
   padding: 1rem;
@@ -250,7 +249,8 @@ body {
 .content__visible {
   display: flex;
   justify-content: space-between;
-  margin-top: 1rem; }
+  margin-top: 1rem;
+  flex-wrap: wrap; }
 
 .active {
   background-color: #283854; }
@@ -271,7 +271,11 @@ body {
 
 .accordion-css {
   display: flex;
-  margin: 2rem auto; }
+  margin: 2rem auto;
+  justify-content: center;
+  width: 100%;
+  overflow: hidden;
+  max-width: 80rem; }
 
 .accordio__item {
   display: flex;
@@ -306,6 +310,10 @@ body {
 
 .accordio__item:hover .accordio__left {
   width: 35rem; }
+
+@media screen and (max-width: 442px) {
+  .acc-item__card {
+    width: 100%; } }
 
 /*
 #00A676 - green
